[package]
name = "gtt23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = "0.8.1"

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
hdf5 = { version = "0.8.1", features = ["blosc"] }
humantime = "2.1.0"
indicatif = "0.17.7"
log = "0.4.20"
ndarray = "0.15.6"
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
zstd = "0.13.0"

[lib]
name = "gtt23"
path = "src/lib.rs"

[[example]]
name = "dumpcirc"

[[example]]
name = "copycircuits"

[[example]]
name = "writecircuits"

[[example]]
name = "writeindex"

[[example]]
name = "writenotes"
