[package]
name = "gtt23"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.10.0" }

[dev-dependencies]
anyhow = "1.0.0"
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.0"
hdf5 = { package = "hdf5-metno", version = "0.10.0", features = ["blosc-zstd"] }
humantime = "2.2.0"
indicatif = "0.17.0"
log = "0.4.0"
ndarray = "0.16.0"
serde_json = "1.0.0"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
zstd = "0.13.0"

[lib]
name = "gtt23"
path = "src/lib.rs"

[[example]]
name = "dumpcirc"

[[example]]
name = "copycircuits"

[[example]]
name = "writecircuits"

[[example]]
name = "writeindex"

[[example]]
name = "writenotes"
